--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.4",
-    "socket.io": "^4.2.0"
+    "socket.io": "^4.2.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
