--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
   "rules": {
     "linebreak-style": "off",
     "import/prefer-default-export": "off",
-    "comma-dangle": "off"
+    "comma-dangle": "off",
+    "object-curly-newline": ["error", { "multiline": true }]
   }
 }
