--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "license": "ISC",
   "author": "Kurineva Evgenia",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "dev": "nodemon app.js",
+    "start": "node app.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
